@@ -28,7 +28,7 @@ arranging for one subtree to appear more than once in the graph:
 >>> graph = Graph(working_set=ws)
 >>> graph.from_working_set()
 >>> sprint(graph)
-{'anton': {'berta': {None: set([])}, 'charlie': {None: set([])}},
+{'anton': {'berta': {None: set([])}, 'charlie': {'extra': set([])}},
  'berta': {'charlie': {None: set([])}},
  'charlie': {'dora': {None: set(['extra'])}},
  'dora': {}}
